--- a/www/html/projetos.html
+++ b/www/html/projetos.html
@@ -32,9 +32,15 @@
 
         <script type="x-tmpl-mustache" id="template-projeto">
           <div class="info-proj">
-            <p class="nome" id="nome">Nome: {{nome}}</p>
-            <p class="diasSemana" id="diasSemana">Dias: {{diasSemana}}</p>
-            <p class="professor" id="professor">Professor: {{professor}}</p>
+            <div class="estilizarTpl">
+                <p class="lbStyle">Nome:</p><p class="valReceived" id="nome">{{nome}}</p>
+            </div>
+            <div class="estilizarTpl">
+                <p class="lbStyle">Dias:</p><p class="valReceived" id="diasSemana">{{diasSemana}}</p>
+            </div>
+            <div class="estilizarTpl">
+                <p class="lbStyle">Professor:</p><p class="valReceived" id="professor">{{professor}}</p>
+             </div>   
             <button name="btExcluir" id="btExcluir">Excluir</button>
             <button name="btAlterar" id="btAlterar">Alterar</button>
           </div>
